Added more backend and frontend logic for the post and project, now logged in users can creat a post and add a project to the post.
